--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/pizz_alcazar?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 logging.level.org.springframework.security=DEBUG
 spring.web.resources.static-locations=file:./uploads/images/
